fixded the overflow issue with the main component , and the company logo issue using (src={require('')}

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ nav{
   width: 100;
   height: 20vh;
   position: sticky;
+  z-index: 1;
   top: 0;
   background-color: white;
 }
@@ -60,6 +61,7 @@ border-radius: 5px;
 }
 .overflow-scroll{
   width: 80%;
+  height: 48%;
   /* margin: auto 0; */
   overflow-y: scroll;
   border: 3px solid black;
@@ -82,7 +84,7 @@ border-radius: 5px;
   grid-template-columns: 0.5fr 3.5fr;
   align-items: center;
   gap: 0.5rem;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 h4{
   display: inline;
